--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 .navbar-brand img {
-    height: 50px;
+    height: 40px;
 }
 
 /* Hero Section */
@@ -38,8 +38,9 @@ body {
 }
 
 .hero p {
-    font-size: 1.2rem;
+    font-size: 2rem;
     margin-top: 10px;
+    color: golden;
 }
 
 /* Donate Button */
@@ -47,7 +48,7 @@ body {
     background-color: #FFD700;
     color: #4F4F4F;
     font-weight: bold;
-    padding: 12px 25px;
+    padding: 12px 20px;
     border: none;
     border-radius: 8px;
     transition: all 0.3s ease-in-out;
@@ -65,7 +66,7 @@ body {
 .footer {
     background-color: #333;
     color: white;
-    padding: 20px 0;
+    padding: 10px 0;
     text-align: center;
     font-size: 1rem;
     position: relative;
